--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendar</title>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="js/scripts.js" defer></script>
 </head>
 <body>
-
+    <div>
+        <p id="x1" class="title"></p>
+        <div id="x2" class="calendar"></div>
+        <div id="x3" class="caption"></div>
+    </div>
 </body>
 </html>
